--- a/app/src/main/res/layout/crop_harvest_list_card.xml
+++ b/app/src/main/res/layout/crop_harvest_list_card.xml
@@ -28,7 +28,7 @@
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/treatment_kit" />
+                android:src="@drawable/harvesting" />
 
             <View
                 android:id="@+id/txt_view_crop_harvest_card_line"
