--- a/app/src/main/res/layout/crop_scouting_list_card.xml
+++ b/app/src/main/res/layout/crop_scouting_list_card.xml
@@ -27,7 +27,7 @@
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/treatment_kit" />
+                android:src="@drawable/scouting" />
 
             <View
                 android:id="@+id/txt_view_crop_scouting_card_line"
