--- a/app/src/main/res/layout/crop_spraying_list_card.xml
+++ b/app/src/main/res/layout/crop_spraying_list_card.xml
@@ -34,7 +34,7 @@
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/treatment_kit" />
+                android:src="@drawable/spraying" />
 
             <View
                 android:id="@+id/txt_view_crop_spraying_card_line"
