Added Settings Activity

--- a/app/src/main/res/layout/content_crop_dashboard.xml
+++ b/app/src/main/res/layout/content_crop_dashboard.xml
@@ -70,6 +70,7 @@
                             android:id="@+id/imgsetting"
                             android:layout_width="30dp"
                             android:layout_height="20dp"
+                            android:onClick="openSettings"
                             android:layout_alignParentRight="true"
                             android:layout_centerVertical="true"
                             android:layout_marginRight="15dp"
