--- a/app/src/main/res/layout/content_crop_farm_reports.xml
+++ b/app/src/main/res/layout/content_crop_farm_reports.xml
@@ -23,22 +23,45 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:layout_margin="8dp"
+                android:background="@drawable/black_border"
                 >
-                <Spinner
-                    android:id="@+id/spinner_crop_farm_reports_income_category_range"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
-                    android:background="@drawable/input_shapes"
-                    android:entries="@array/graphs_time_period_options"
-                    android:layout_weight="0.5"
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_margin="8dp"
+                    android:layout_gravity="center_vertical"
+
                     >
-                </Spinner>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="Select"
+                        android:textColor="@color/blackText"
+
+                        android:textSize="18sp" />
+                    <Spinner
+                        android:id="@+id/spinner_crop_farm_reports_income_category_range"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4dp"
+                        android:background="@drawable/input_shapes"
+                        android:entries="@array/graphs_time_period_options"
+                        android:layout_weight="0.5"
+                        >
+                    </Spinner>
+                </LinearLayout>
+
+
 
                 <com.highsoft.highcharts.core.HIChartView
                     android:layout_width="match_parent"
                     android:layout_height="400dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_margin="8dp"
                     android:id="@+id/chart_crop_farm_reports_income_category_pie"
                     />
             </LinearLayout>
@@ -47,23 +70,101 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:layout_margin="8dp"
+                android:background="@drawable/black_border"
                 >
-                <Spinner
-                    android:id="@+id/spinner_crop_farm_reports_expense_category_range"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
-                    android:background="@drawable/input_shapes"
-                    android:entries="@array/graphs_time_period_options"
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_margin="8dp"
+                    android:layout_gravity="center_vertical"
 
                     >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:text="Select"
+                        android:textColor="@color/blackText"
+                        android:textSize="18sp"
+                        android:layout_marginStart="8dp"
+                        android:layout_margin="4dp"
+                        android:gravity="center_vertical"
+                        />
+                        <Spinner
+                            android:id="@+id/spinner_crop_farm_reports_expense_category_range"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_margin="4dp"
+                            android:background="@drawable/input_shapes"
+                            android:entries="@array/graphs_time_period_options"
+                            >
                 </Spinner>
+                </LinearLayout>
 
                 <com.highsoft.highcharts.core.HIChartView
                     android:layout_width="match_parent"
                     android:layout_height="400dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_margin="8dp"
                     android:id="@+id/chart_crop_farm_reports_expense_category_pie"
+                    />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_margin="8dp"
+                android:background="@drawable/black_border"
+                >
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="4dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Select"
+                        android:textColor="@color/blackText"
+                        android:textSize="18sp"
+                        android:gravity="center_vertical"
+                        android:layout_marginStart="8dp"
+
+                        />
+                    <Spinner
+                        android:id="@+id/crop_graphs_bar_crop_income_year_spinner"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/input_shapes"
+
+                        >
+                    </Spinner>
+                    <Spinner
+                        android:id="@+id/crop_graphs_bar_crop_income_season_spinner"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/input_shapes"
+                        android:entries="@array/graph_crops_season"
+                        >
+                    </Spinner>
+
+                </LinearLayout>
+
+                <com.highsoft.highcharts.core.HIChartView
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    android:layout_margin="8dp"
+                    android:id="@+id/chart_crop_farm_reports_crops_expenses_pie_activity_pie"
                     />
             </LinearLayout>
             <LinearLayout
@@ -71,25 +172,46 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:layout_margin="8dp"
-
+                android:background="@drawable/black_border"
                 >
-                <Spinner
-                    android:id="@+id/spinner_crop_farm_reports_expense_activity_range"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
-                    android:background="@drawable/input_shapes"
-                    android:entries="@array/graphs_time_period_options"
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_margin="8dp"
+                    android:layout_gravity="center_vertical"
+
                     >
-                </Spinner>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="Select"
+                        android:textColor="@color/blackText"
+
+                        android:textSize="18sp" />
+                    <Spinner
+                        android:id="@+id/spinner_crop_farm_reports_expense_activity_range"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4dp"
+                        android:background="@drawable/input_shapes"
+                        android:entries="@array/graphs_time_period_options"
+                        >
+                    </Spinner>
+                </LinearLayout>
 
                 <com.highsoft.highcharts.core.HIChartView
                     android:layout_width="match_parent"
                     android:layout_height="400dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_margin="8dp"
                     android:id="@+id/chart_crop_farm_reports_expense_activity_pie"
                     />
             </LinearLayout>
+
 
         </LinearLayout>
     </ScrollView>
