--- a/app/src/main/res/layout/crop_notes_list_card.xml
+++ b/app/src/main/res/layout/crop_notes_list_card.xml
@@ -44,7 +44,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
             android:orientation="vertical">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
             <TextView
                 android:id="@+id/txt_view_crop_notes_card_date"
                 android:layout_width="wrap_content"
@@ -53,6 +56,21 @@
                 android:text="20-08-2018"
                 android:textColor="@color/blackText" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="end"
+        android:layout_weight="0.1"
+        android:orientation="horizontal">
+
+
+        <ImageView
+            android:id="@+id/img_crop_notes_card_more"
+            android:layout_width="24dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/more_options_icon" />
+    </LinearLayout>
+</LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -62,9 +80,11 @@
                 android:padding="4dp">
 
                <LinearLayout
+                   android:id="@+id/layout_crop_notes_card_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
-                   android:orientation="horizontal">
+                   android:orientation="horizontal"
+                   android:visibility="gone">
                 <TextView
                     android:id="@+id/txt_view_crop_notes_card_category"
                     android:layout_width="wrap_content"
@@ -73,21 +93,9 @@
                     android:text="Maintenance"
                     android:textStyle="bold"
                     android:textSize="18dp"
-                    android:textColor="@color/blackText" />
-                   <LinearLayout
-                       android:layout_width="match_parent"
-                       android:layout_height="match_parent"
-                       android:gravity="end"
-                       android:layout_weight="0.1"
-                       android:orientation="horizontal">
+                    android:textColor="@color/blackText"
+                    />
 
-
-                       <ImageView
-                           android:id="@+id/img_crop_notes_card_more"
-                           android:layout_width="24dp"
-                           android:layout_height="match_parent"
-                           android:src="@drawable/more_options_icon" />
-                   </LinearLayout>
                </LinearLayout>
 
                 <View
